fixed link contrast & disabled indexing

--- a/src/bundle.scss
+++ b/src/bundle.scss
@@ -129,8 +129,8 @@ h1, h2 {
 	font-size: 1.1rem;
     --background-color: #152028;
     --text-color: rgba(255, 255, 255, 0.87);
-    --link-text-color: #a5c3ff;
-    --link-hover-color: #aebfce;
+    --link-text-color: #747bff;
+    --link-hover-color: #424bee;
 	--accent-color: rgb(239, 25, 3);
     --button-background-color: #1a1a1a;
     --navbar-background-color: #172e33;
@@ -145,7 +145,7 @@ h1, h2 {
 	:root {
 		--background-color: #eee;
 		--text-color: #213547;
-		--link-text-color: #646cff;
+		--link-text-color: #222df8;
 		--link-hover-color: #747bff;
 		--accent-color: red;
 		--button-background-color: #1a1a1a;
@@ -173,6 +173,13 @@ a {
 	}
 	>img {
 		transform: translateY(0.1em);
+	}
+}
+
+header a, footer a {
+	color: lightskyblue;
+	&:hover {
+		color: cadetblue;
 	}
 }
 
